--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ Ngozi Adichie, Ch. (2017). Querida Ijeawele. Cómo educar en el feminismo. Colom
                   <div class="example-question-container">
                      <h4>Pregunta Independiente (Tomada de ICFES 2024 - Pregunta 25, Sesión 1)</h4>
                       <p class="question-text"><strong>Contexto:</strong></p>
-                      <img src="triangulo_pregunta25.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;">
+                      <img src="/myclass/triangulo_pregunta25.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;">
                      <p><strong>Pregunta:</strong></p>
                      <p><strong>25. Se necesita encontrar el área del triángulo sombreado: ¿Cuál es el área del triángulo?</strong></p>
                      <ol class="options">
