--- a/index.html
+++ b/index.html
@@ -663,7 +663,7 @@ Ngozi Adichie, Ch. (2017). Querida Ijeawele. Cómo educar en el feminismo. Colom
                      <h4>Pregunta Guiada (Tomada de ICFES 2024 - Pregunta 102, Sesión 1)</h4>
                       <p class="question-text"><strong>Contexto:</strong></p>
                      <p>102. Una estudiante realiza un experimento para analizar la aceleración inicial de una burbuja de aire dentro de un tubo lleno de aceite, para diferentes ángulos de inclinación del tubo, como se muestra en la figura. Ella obtiene los siguientes resultados que se muestran en la tabla.</p>
-                       <img src="imagenp102.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;"> 
+                       <img src="/myclass/imagenp102.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;"> 
                      <p><strong>Pregunta:</strong></p>
                      <p><strong>Teniendo en cuenta la información anterior, ¿cómo será la aceleración inicial de la burbuja si el ángulo continúa aumentando?</strong></p>
                      <ol class="options">
@@ -690,7 +690,7 @@ Ngozi Adichie, Ch. (2017). Querida Ijeawele. Cómo educar en el feminismo. Colom
                      <h4>Pregunta Independiente (Tomada de ICFES 2024 - Pregunta 113, Sesión 1)</h4>
                       <p class="question-text"><strong>Contexto:</strong></p>
                      <p>113. En general, la materia se clasifica según la siguiente tabla.</p>
-                       <img src="imagenp113.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;"> 
+                       <img src="/myclass/imagenp113.png" alt="Triángulo sombreado con dimensiones" style="max-width: 300px; display: block; margin: 10px auto;"> 
                      <p>Para la producción de un medicamento, se mezcla un principio activo (molécula con actividad biológica) con distintos excipientes (compuestos en forma sólida o líquida) que mejoran su distribución y liberación en el organismo. De acuerdo con la tabla, ¿cómo se clasifican el principio activo y los excipientes del medicamento?</p>
                        <p><strong>Pregunta:</strong></p>
                      <p><strong>¿Cómo se clasifican el principio activo y los excipientes del medicamento?</strong></p>
